--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -27,8 +27,9 @@
 	        <td class="col-md-4 text-center">
 	        	
 	        	<a ng-click="add(cardpool.pool_code)" class="btn btn-default btn-xs">添加卡</a>
-	        	
-	        	<a ng-click="release(cardpool.pool_code)" class="btn btn-default btn-xs">卡池详情</a></td>
+	        	<a ng-click="relief(cardpool.pool_code)" class="btn btn-default btn-xs">释放卡</a>
+	        	<a ng-click="release(cardpool.pool_code)" class="btn btn-default btn-xs">卡池详情</a>
+	        </td>
 	      </tr>
 	    </tbody>
 	  </table>
