--- a/app/12sale/views/autwintic.html
+++ b/app/12sale/views/autwintic.html
@@ -38,10 +38,10 @@
 
 		   <div class="panel-body">
 		    <button type="button" class="btn btn-warning btn-block"
-			ng-show="user.what == 0" ng-click="buynotrealname()"
+			ng-show="user.what === '0'" ng-click="buynotrealname()"
 		    >发送激活码</button>
 			<button type="button" class="btn btn-primary btn-block"
-			ng-show="user.what == 1" ng-click="buyrealname()"
+			ng-show="user.what === '1'" ng-click="buyrealname()"
 			>发送套票50元</button>
 			<button type="button" class="btn btn-danger btn-block"
 			ng-click="buy90()"
