--- a/app/12sale/views/autwintic.html
+++ b/app/12sale/views/autwintic.html
@@ -1,63 +1,66 @@
-<div class="col-xs-12">
+<div class="col-xs-12" >
 
-	<div class="col-xs-6 col-xs-offset-3">
-		
-		<div class="panel panel-default ">
-		  <!-- Default panel contents -->
-		  <div class="panel-heading text-center">
+	<!-- <div class="row"> -->
+		<div class="col-xs-3 hidden-xs"></div>
+		<div class="col-md-6 ">
+			
+			<div class="panel panel-default ">
+			  <!-- Default panel contents -->
+			  <div class="panel-heading text-center">
 
-		  		<h4>居游秋冬套票销售</h4>
-		  </div>
-		  <div class="panel-body">
-			  <div class="col-xs-10">
-			   	<input type="text" ng-model="papersno" class="form-control" placeholder="请输入身份证号码">
+			  		<h4>居游秋冬套票销售</h4>
 			  </div>
-			  <div class="col-xs-2">
-			  	<button type="submit" class="btn btn-default" ng-click="searchinfo()">查询</button>
+			  <div class="panel-body">
+				  <div class="col-xs-10">
+				   	<input type="text" ng-model="papersno" class="form-control" placeholder="请输入身份证号码">
+				  </div>
+				  <!-- <div class="col-xs-2"> -->
+				  	<button type="submit" class="btn btn-default col-xs-2" ng-click="searchinfo()">查询</button>
+				  <!-- </div> -->
 			  </div>
-		  </div>
 
-		  <table class="table">
-	        <tbody>
-	          <tr>
-	            <td class="text-right" style="line-height: 36px;">电话</td>
-	            <td>
-	            	<input type="text" ng-model="user.mobile" class="form-control" placeholder="手机号">
-	            </td>
-	          </tr>
-	          <tr>
-	            <td class="text-right">姓名</td>
-	            <td>{{user.name}}</td>
-	          </tr>
-	          <tr>
-	            <td class="text-right">实名制</td>
-	            <td>{{user.whattxt}}</td>
-	          </tr>
-	        </tbody>
-	      </table>
+			  <table class="table">
+		        <tbody>
+		          <tr>
+		            <td class="text-right" style="line-height: 36px;">电话</td>
+		            <td>
+		            	<input type="text" ng-model="user.mobile" class="form-control" placeholder="手机号">
+		            </td>
+		          </tr>
+		          <tr>
+		            <td class="text-right">姓名</td>
+		            <td>{{user.name}}</td>
+		          </tr>
+		          <tr>
+		            <td class="text-right">实名制</td>
+		            <td>{{user.whattxt}}</td>
+		          </tr>
+		        </tbody>
+		      </table>
 
-		   <div class="panel-body">
-		    <button type="button" class="btn btn-warning btn-block"
-			ng-show="user.juyou === '0' || (user.juyou === '1' && user.what === '0')" 
-			ng-click="buynotrealname()"
-			ng-disabled="!notrelbtnstate"
-		    >发送激活码（50元）</button>
-			<button type="button" class="btn btn-primary btn-block"
-			ng-show="user.juyou === '1' && user.what === '1'" 
-			ng-click="buyrealname()"
-			ng-disabled="!relbtnstate"
-			>发送套票（50元）</button>
-			<button type="button" class="btn btn-danger btn-block"
-			ng-click="buy90()"
-			ng-disabled="!btnstate"
-			>直接购票（90元）</button>
-		   </div>
+			   <div class="panel-body">
+			    <button type="button" class="btn btn-warning btn-block"
+				ng-show="user.juyou === '0' || (user.juyou === '1' && user.what === '0')" 
+				ng-click="buynotrealname()"
+				ng-disabled="!notrelbtnstate"
+			    >发送激活码（50元）</button>
+				<button type="button" class="btn btn-primary btn-block"
+				ng-show="user.juyou === '1' && user.what === '1'" 
+				ng-click="buyrealname()"
+				ng-disabled="!relbtnstate"
+				>发送套票（50元）</button>
+				<button type="button" class="btn btn-danger btn-block"
+				ng-click="buy90()"
+				ng-disabled="!btnstate"
+				>直接购票（90元）</button>
+			   </div>
+			</div>
+
 		</div>
 
-	</div>
 
-
-
+		<div class="col-xs-3"></div>
+	<!-- </div> -->
 
 
 
