激活卡被注释了

--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -58,7 +58,7 @@
                   <span class="col-xs-4">生效时间：</span>
                   <div class="input-group col-xs-8">
                   <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd"
-                    ng-model="newdate"  on-open-focus="true"  
+                    ng-model="obj.take_effect_time"  on-open-focus="true"  
                    is-open="obj.opened" ng-required="true" close-text="Close" readonly/>
                       <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="open(obj)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -71,7 +71,7 @@
                 
                 </td> -->
                 <td>
-                  <button type="button" class="btn button" ng-click="mosaic(obj.id,obj.take_effect_time,newdate)">
+                  <button type="button" class="btn button" ng-click="mosaic(obj.id,obj.take_effect_time,obj.otime)">
                     修改
                   </button>
                 </td>
