--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -2,7 +2,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="form-group form-inline">
-            <div class="col-sm-8">
+            <div class="col-md-6">
               <p class="form-control-static">
                 <input type="text" 
                 class="form-control" 
@@ -15,10 +15,12 @@
                 
               </p>
             </div>
-            <div class="col-sm-2">
+            <!-- <div class="col-xs-2"></div> -->
+            <!-- <div class="col-xs-2"></div> -->
+            <!-- <div class="col-xs-1"></div> -->
+            <div class="col-md-2">
                 <p class="form-control-static">
                     账户余额：{{balance_price | currency : '¥'}}
-
                 </p>
                 <!-- <label>分销商名称</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="searchform.name" >
@@ -34,8 +36,7 @@
                 <button type="button" class="btn btn-default" ng-click="load()">立即搜索</button> -->
             </div>
 
-            <div class="col-sm-2 text-right">
-
+            <div class="col-xs-4 text-right">
                 <button type="button" class="btn btn-default pull-right" ng-click="back()">充值回平台</button>
                 <button type="button" class="btn btn-info new" ng-click="create()"
                 has-permission='createdeposit' 
