--- a/app/19guide/views/evaluatechart.html
+++ b/app/19guide/views/evaluatechart.html
@@ -256,7 +256,7 @@
 		      </thead>
 		      <tbody>
 		        <tr ng-repeat="peopleobj in peopleobjs">
-		          <td class="text-center">{{peopleobj.openid}}</td>
+		          <td class="text-center">{{peopleobj.openname}}</td>
 		          <td class="text-center">{{peopleobj.total_price/100}}元</td>
 		          <td class="text-center">
 		          	<a ng-click="info(peopleobj.openid)" class="btn btn-info btn-xs">作答详情</a>
