--- a/app/19guide/views/shakedevicelist.html
+++ b/app/19guide/views/shakedevicelist.html
@@ -19,6 +19,9 @@
                   <input type="text" class="form-control" ng-model="searchform.group_name" placeholder="绑定团名" >
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
+                  <input type="text" class="form-control" ng-model="searchform.remarks" placeholder="备注" >
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+
                   <label>设备绑定类型</label>&nbsp;&nbsp;
                   <select class="form-control" ng-model="searchform.binding_type">
                     <option value="1"> 旅行社评价 </option>
