--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -73,6 +73,15 @@
 			    </div>
 		    </div>
 	    </div>
+
+	    <div class="form-group">
+			<label class="col-xs-2 control-label">最大报名人数</label>
+			<div class="col-xs-6">
+				<input type="number" class="form-control" 
+				ng-model="obj.binding_maxsignup"
+				>
+			</div>
+		</div>
     </div>
 
 	<div class="form-group">
