'设备管理加分页'

--- a/app/19guide/views/shakedevicelist.html
+++ b/app/19guide/views/shakedevicelist.html
@@ -54,7 +54,7 @@
 
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  <button type="button" class="btn btn-default search pull-right" ng-click="search()">立即搜索</button>
+                  <button type="button" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
 
                 </div>
 
@@ -99,7 +99,7 @@
   </table>
 
 
-<!--   <div class="text-right">
+<div class="text-right">
 
     <uib-pagination 
       total-items="bigTotalItems" 
@@ -116,7 +116,7 @@
       rotate="false">
     </uib-pagination>
 
-  </div> -->
+  </div>
   
 
 </div>
