--- a/app/19guide/views/evaluatechart.html
+++ b/app/19guide/views/evaluatechart.html
@@ -32,7 +32,7 @@
 				           
 					<input type="checkbox" ng-model="usedate" 
                     ng-true-value="1" ng-false-value="0"
-                  	> 出游时间</label>&nbsp;&nbsp;
+                  	> <label>评价时间</label>&nbsp;&nbsp;
 					<div class="input-group">
 					<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
 					  <span class="input-group-btn">
