--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -1,9 +1,22 @@
 <form class="form-horizontal" role="form">  
-  <h2>卡池列表</h2>
+  
+<div class="col-sm-12">
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="form-group form-inline">
+            <div class="col-sm-12">
+                  <label for="inputLottry" class="control-label">卡池列表</label>
 
-  <div class="form-group">
-  <button type="button" class="btn btn-primary col-md-1  col-md-offset-10" ng-click="addcardpool()">添加卡池</button>
-  </div>
+
+                  
+                  <button type="button" class="btn btn-default search pull-right" ng-click="addcardpool()">添加卡池</button>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
   <div class="col-md-12 panel panel-default table-responsive">
      <table ng-click="getlist()" class="table table-bordered">
