--- a/app/21card/views/cardcomplete.html
+++ b/app/21card/views/cardcomplete.html
@@ -1,26 +1,28 @@
 <form class="form-horizontal" role="form">
-<h2>添加卡</h2>   
-<div class="col-md-8">
+<h2>更改制作状态</h2>
+  
+<div class="col-md-12">
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
+
               <label class="col-md-1 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.type">单张</label>
+              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="0" ng-model="cardinfo.cardstatu">单张</label>
               <input type="text" class="col-md-2 form-control" id="inputLottry" placeholder="卡号"
                    ng-model="cardinfo.cardnum">
               <div>
               <label class="col-md-1 col-md-offset-1 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.type">卡段</label>
+              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.cardstatu">卡段</label>
               </div>
               <input type="text" class="form-control" id="inputLottry" placeholder="起始卡号"
-                   ng-model="cardinfo.startnum">
+                   ng-model="cardinfo.startcard">
               <input type="text" class="form-control" id="inputLottry" placeholder="结束卡号"
-                   ng-model="cardinfo.endnum">
+                   ng-model="cardinfo.endcard">
 
 
                   
-                  <button type="button" class="btn btn-default search pull-right" ng-click="addcard()">添加卡</button>
+                  <button type="button" class="btn btn-default search pull-right" ng-click="change()">确定更改</button>
 
 
             </div>
@@ -28,5 +30,7 @@
     </div>
 </div><!-- searchArea -->
 
+
+  
 
 </form>
