--- a/app/21card/views/issuecard.html
+++ b/app/21card/views/issuecard.html
@@ -1,19 +1,23 @@
 <form class="form-horizontal" role="form">
  <h2>记录发卡信息</h2>
+ <div class="col-md-5 col-md-offset-1">
+ <div class="panel panel-default">
+ <div class="panel-body">
+ <div class="form-group">
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">类型：</label>
- <label class="col-md-1 radio-inline ">
+ <label for="inputDate" class="col-md-4 control-label">类型：</label>
+ <label class="col-md-2 radio-inline ">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="userinfo.type">拿卡
         </label>
- <label class="col-md-1 radio-inline ">
+ <label class="col-md-2 radio-inline ">
             <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="userinfo.type">退卡
         </label>
  </div>
  
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">拿/退卡人姓名：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">拿/退卡人姓名：</label>
+ <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder="* * *"
       ng-model="userinfo.name"
       >
@@ -21,8 +25,8 @@
  </div>
 
  <div class="form-group">
-  <label for="inputDate" class="col-sm-2 control-label">电话：</label>
-  <div class="col-md-3">
+  <label for="inputDate" class="col-sm-4 control-label">电话：</label>
+  <div class="col-md-6">
   <input type="text" class="form-control" id="inputpoolname" placeholder="* * *"
       ng-model="userinfo.mobile"
       >
@@ -30,8 +34,8 @@
  </div>
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">机构编码：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">机构编码：</label>
+ <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder="* * *"
       ng-model="userinfo.company_code"
       >
@@ -39,8 +43,8 @@
  </div>
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">号段：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">号段：</label>
+ <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder="起始号段"
       ng-model="userinfo.start_card_no"
       >
@@ -48,8 +52,8 @@
  </div>
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label"></label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label"></label>
+ <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder="结束号段"
       ng-model="userinfo.end_card_no"
       >
@@ -61,8 +65,8 @@
 
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">拿卡数量：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">拿卡数量：</label>
+ <div class="col-md-6">
  <p type="text" class="form-control" id="inputpoolname" 
       ng-model="userinfo.num">
        {{userinfo.end_card_no - userinfo.start_card_no + 1}} </p>
@@ -71,8 +75,8 @@
  </div>
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">单价：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">单价：</label>
+ <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname"
       ng-model="userinfo.unit_price"
       >
@@ -80,8 +84,8 @@
  </div>
 
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">总金额：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">总金额：</label>
+ <div class="col-md-6">
  <p type="text" class="form-control" id="inputpoolname" 
       ng-model="userinfo.all_price">
       {{(userinfo.end_card_no - userinfo.start_card_no + 1) * userinfo.unit_price}} </p>
@@ -89,8 +93,8 @@
  </div>
  
  <div class="form-group">
- <label for="inputDate" class="col-sm-2 control-label">发放目标：</label>
- <div class="col-md-3">
+ <label for="inputDate" class="col-sm-4 control-label">发放目标：</label>
+ <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder="* * *"
       ng-model="userinfo.card_giveout_target"
       >
@@ -98,17 +102,20 @@
  </div>
 
  <div class="form-group">
-  <label for="inputDate" class="col-sm-2 control-label">备注：</label>
-  <div class="col-sm-3">
+  <label for="inputDate" class="col-sm-4 control-label">备注：</label>
+  <div class="col-sm-6">
   <textarea class="form-control col-sm-2" cols="30" rows="3" ng-model="userinfo.remarks"></textarea>
   </div>
  </div>
 
  <div>
-  <button type="button" class="col-md-1 col-md-offset-3 btn btn-primary btn-xs" ng-click="saveuserinfo()">保存</button>
+  <button type="button" class="col-md-1 col-md-offset-6 btn btn-primary btn-xs" ng-click="saveuserinfo()">保存</button>
  </div>
 
-
+</div>
+</div>
+</div>
+</div>
  
 
 
