--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -1,65 +1,47 @@
-<form class="form-horizontal" role="form">
-  <h2>修改卡状态</h2>
-  
-  <div class="form-group">
-    <label for="inputLottry" class="col-sm-2 control-label">卡号</label>
-    <div class="col-md-4">
-      <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **" ng-model = "cardinfo.cardno">
+<form class="form-horizontal" role="form"> 
+<h2>修改卡状态</h2>
+<div class="col-sm-12">
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="form-group form-inline">
+            <div class="col-sm-12">
+                <label>卡号</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="cardinfo.cardno" >
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                  <button type="button" class="btn btn-default search pull-right" ng-click="queryuser()">查询</button>
+
+
+            </div>
+        </div>
     </div>
-    <div>
-    <button type="submit" class="btn btn-default"
-      ng-click="queryuser()"
-      >查询</button>
-    </div> 
-  </div>
+</div><!-- 根据卡号查询用户信息 -->
 
-    <div class="form-group">
-     <div class="panel panel-default col-md-4 col-md-offset-2">
-            <table class="table table-bordered">
-		        <tbody>
-		          <tr>
-		            <td class="col-md-1 text-center">姓名</td>
-		            <td class="col-md-3">{{userinfo.username}}</td>
-		          </tr>
-		          <tr>
-		            <td class="col-xs-1 text-center">电话</td>
-		            <td class="col-xs-3">{{userinfo.mobile}}</td>
-		          </tr>
-		          <tr>
-		            <td class="col-xs-1 text-center">身份证</td>
-		            <td class="col-xs-3">{{userinfo.papersno}}</td>
-		          </tr>
-		          <tr>
-		            <td class="col-xs-1 text-center">卡状态</td>
-		            <td class="col-xs-3">{{userinfo.card_status_z}}</td>
-		          </tr>
-		          
-		        </tbody>
-		    </table>
-	 </div>	    
+   <div class="col-md-12 panel panel-default table-responsive">
+     <table ng-click="getlist()" class="table table-bordered">
+	    <thead>
+	      <tr>
+	        <th class="col-md-2 text-center">姓名</th>
+	        <th class="col-md-2 text-center">电话</th>
+	        <th class="col-md-2 text-center">身份证</th>
+	        <th class="col-md-2 text-center">卡状态</th>
+	        <th class="col-md-4 text-center">操作</th>
+	      </tr>
+	    </thead>
+	    <tbody>
+	    	<tr>
+	        <td class="col-md-2 text-center">{{userinfo.username}}</td>
+	        <td class="col-md-2 text-center">{{userinfo.mobile}}</td>
+	        <td class="col-md-2 text-center">{{userinfo.papersno}}</td>
+	        <td class="col-md-2 text-center">{{userinfo.card_status_z}}</td>
+	        <td class="col-md-4 text-center">
+	        	<a ng-click="used()" class="btn btn-primary btn-xs">置为已用</a>
+	        	<a ng-click="lost()" class="btn btn-danger btn-xs">挂失</a>
+	        	
+	        </td>
+	      </tr>
+	    </tbody>
+	  </table>
+	</div>	    
     </div>
-
-    <div class="form-group">
-
-     
-     <button type="submit" class="btn btn-default col-md-1 col-md-offset-3"
-      ng-click="used()"
-      >置为已用</button>
-    
-
-    
-     <button type="submit" class="btn btn-default"
-      ng-click="lost()"
-      >挂失</button>
-      
-
-    </div>
-     
-    
-    
-
-     
-
-
 
  </form>
