'修改商客产品管理'

--- a/app/07product/views/tktskgoods.html
+++ b/app/07product/views/tktskgoods.html
@@ -3,7 +3,7 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-10">
-                <label>销售品名称</label>&nbsp;&nbsp;
+                <label>商客产品名称</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="searchform.name" >
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <label>景区编号</label>&nbsp;&nbsp;
@@ -23,8 +23,8 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="text-center col-md-5">销售品名称</th>
-        <th class="text-center col-md-2">销售品编号</th>
+        <th class="text-center col-md-5">商客产品名称</th>
+        <th class="text-center col-md-2">商客产品编号</th>
         <th class="text-center col-md-1">市场价</th>
         <th class="text-center col-md-1">指导价</th>
         <th class="text-center col-md-1">成本价</th>
