'修改设置分销价功能'

--- a/app/07product/views/edittktskgoods.html
+++ b/app/07product/views/edittktskgoods.html
@@ -18,7 +18,7 @@
 		<label class="col-xs-1 control-label"></label>
 		<label class="col-xs-3 control-label">分销成本价</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control"
+			<input type="number" class="form-control"
 			ng-model="obj.cost_price"
 			>
 		</div>
